--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <div class="page">
     <header>
-      <nav>
+      <nav class="navbar">
         <div class="left">
           <a href="#">
-            <img src="./images/assets/bars.png" alt="3bars" />
+            <img id="bars" src="./images/assets/bars.png" alt="3bars" />
           </a>
         </div>
         <div class="middle">
           <a href="#">
-            <img
+            <img id="logo"
               src="./images/pngfind.com-adidas-logo-png-1032730.png"
               alt="adidas logo"
             />
@@ -26,7 +26,7 @@
         </div>
         <div class="right">
           <a href="#">
-            <img src="./images/assets/clipart201839.png" alt="" />
+            <img id="shopping" src="./images/assets/clipart201839.png" alt="" />
           </a>
         </div>
       </nav>
@@ -34,17 +34,17 @@
     <main>
       <div class="container">
         <div class="left">
-          <h2>Shoe</h2>
-          <p>
+          <h2 class="title" >Shoe</h2>
+          <p class="paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
             eligendi ipsum ipsam iusto voluptate molestias exercitationem illo,
             debitis mollitia odio.
           </p>
-          <button>Buy Now</button>
+          <button class="btn">Buy Now</button>
         </div>
         <div class="right">
           <div class="ring">
-            <img
+            <img class="shoe"
               src="./images/Adidas-Shoes-PNG-Picture.png"
               alt="adidas shoe"
             />
